[gd_scene load_steps=12 format=2]

[ext_resource path="res://debris/mediumDebris.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/debris/debris_middle_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://debris/smallDebris.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 31, 28 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 31, 0, 31, 28 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 28, 31, 28 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 31, 28, 31, 28 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 0, 56, 31, 28 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 31, 56, 31, 28 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
resource_local_to_scene = true
extents = Vector2( 11.2318, 11.3211 )

[node name="mediumDebris" type="RigidBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )
smallDebrisScene = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 3.06135, 2.6869 )

[connection signal="body_entered" from="." to="." method="_on_debris_body_entered"]
[connection signal="hit_by_projectile" from="." to="." method="_on_debris_hit_by_projectile"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
